--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "@supabase/supabase-js": "^2.39.1",
+    "@tanstack/match-sorter-utils": "^8.11.8",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-query-devtools": "^4.36.1",
+    "@tanstack/react-table": "^8.12.0",
     "date-fns": "^3.0.5",
     "dotenv": "^16.4.1",
     "react": "^18.2.0",
@@ -22,7 +25,8 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.0",
-    "recharts": "^2.10.3"
+    "recharts": "^2.10.3",
+    "use-debounce": "^10.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
