--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-slot": "^1.0.2",
     "@supabase/supabase-js": "^2.39.1",
     "@tanstack/match-sorter-utils": "^8.11.8",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-query-devtools": "^4.36.1",
     "@tanstack/react-table": "^8.12.0",
-    "date-fns": "^3.0.5",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
     "dotenv": "^16.4.1",
+    "lucide-react": "^0.350.0",
     "react": "^18.2.0",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.12",
     "react-hook-form": "^7.49.2",
@@ -26,6 +32,8 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.0",
     "recharts": "^2.10.3",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.0"
   },
   "devDependencies": {
